@@ -3,7 +3,7 @@
  *   LinuxSampler - modular, streaming capable sampler                     *
  *                                                                         *
  *   Copyright (C) 2003-2004 by Benno Senoner and Christian Schoenebeck    *
- *   Copyright (C) 2005-2009 Christian Schoenebeck                         *
+ *   Copyright (C) 2005-2011 Christian Schoenebeck                         *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -118,7 +118,7 @@ int main(int argc, char **argv) {
 
     dmsg(1,("LinuxSampler %s\n", VERSION));
     dmsg(1,("Copyright (C) 2003,2004 by Benno Senoner and Christian Schoenebeck\n"));
-    dmsg(1,("Copyright (C) 2005-2009 Christian Schoenebeck\n"));
+    dmsg(1,("Copyright (C) 2005-2011 Christian Schoenebeck\n"));
 
     #if defined(WIN32)
     #if 0
